# auctionresult

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  get.rs  latest.rs  lib.rs  macros.rs  main.rs  quality.rs  tenor.rs  tests.rs  treasury.rs  treasury_type.rs  util.rs
src/latest/: auctioned.rs  tests.rs
src/latest/tests/: mockito.rs
src/quality/: auction_quality.rs
src/tests/: bond.json  csv.jq  fixture.rs
src/treasury/: deserializer.rs  error.rs  load.rs  print.rs  security_type.rs  tests.rs  treasury_type.rs
src/treasury/tests/: fixture.rs
