[package]
name = "auctionresult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[bin]]
#name = "hallo"
#path = "src/main.rs"

#[lib]
#name = "hallo"
#path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.33", default-features = false, features = ["alloc", "iana-time-zone", "std", "wasmbind", "serde"] }
enum_stringify = "0.3.0"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
mockito = "1.2.0"
prettytable = "0.10.0"
numfmt = "1.1.1"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
